# q6w

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  build-package.sh  build.rs
.github/workflows/: push.yml
src/: app.rs  gpu_renderer.rs  gst_pipeline.rs  main.rs
